@@ -51,6 +51,11 @@ table.typo3-TCEforms {
 	width: 93%;
 }
 
+table.typo3-TCEforms tr.typo3-TCEforms-recHeaderRow td {
+	padding-top: 5px;
+	padding-bottom: 20px;
+}
+
 table.typo3-TCEforms .bgColor2,
 table.typo3-TCEforms tr.bgColor2 td {
 	padding-bottom: 5px;
