@@ -1,3 +1,7 @@
+2010-06-21  Benjamin Mack  <benni@typo3.org>
+
+	* Followup to #14636: Improvements to new Backend skin - Smaller TCEforms changes, RTE styling (Thanks to Steffen Gebert)
+
 2010-06-21  Jeff Segars  <jeff@webempoweredchurch.org>
 
 	* Fixed bug #14804: Updated extension icons for system extensions (Thanks to Jigal van Hemert)
